--- a/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
+++ b/CMP_0.0/CMP_0.0/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hCP-hr-fxT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WEy-2h-POy">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -328,6 +328,7 @@
                                                 <connections>
                                                     <outlet property="restaurantImage" destination="ebo-8l-bt3" id="B4q-ah-RKf"/>
                                                     <outlet property="restaurantName" destination="tG0-tT-reI" id="hkm-Hb-x3e"/>
+                                                    <segue destination="gCE-E3-GTf" kind="show" id="iT8-k5-LTX"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -363,7 +364,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N3C-Ly-zn7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1885" y="-2417"/>
+            <point key="canvasLocation" x="1880" y="-2569"/>
         </scene>
         <!--Profile-->
         <scene sceneID="f3u-tn-VkT">
@@ -923,6 +924,123 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ix6-tK-eH5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2216" y="-1214"/>
+        </scene>
+        <!--Restaurant Detail-->
+        <scene sceneID="IL0-S8-hE3">
+            <objects>
+                <viewController id="gCE-E3-GTf" customClass="RestaurantDetail" customModule="CMP_0_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xh0-bf-4No"/>
+                        <viewControllerLayoutGuide type="bottom" id="wjm-26-JWQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NMS-Py-EpB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dkS-ur-rdA">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gNd-nw-rfW">
+                                        <rect key="frame" x="0.0" y="185" width="320" height="295"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="VgX-FK-xhL">
+                                                <rect key="frame" x="0.0" y="28" width="320" height="88"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VgX-FK-xhL" id="oqE-ED-qsR">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ffv-V4-Utn">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="183"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0uk-xe-eoO">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="183"/>
+                                            </imageView>
+                                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mVJ-Is-uRL">
+                                                <rect key="frame" x="0.0" y="116" width="320" height="59"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVi-dT-Tih">
+                                                        <rect key="frame" x="8" y="0.0" width="304" height="21"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5JQ-7X-ggn">
+                                                        <rect key="frame" x="8" y="22" width="304" height="16"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2M-g7-1TT">
+                                                        <rect key="frame" x="75" y="46" width="171" height="13"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="13" id="lTp-ch-upd"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="mVi-dT-Tih" firstAttribute="leading" secondItem="5JQ-7X-ggn" secondAttribute="leading" id="0K7-7L-Gjd"/>
+                                                    <constraint firstItem="R2M-g7-1TT" firstAttribute="leading" secondItem="mVJ-Is-uRL" secondAttribute="leading" constant="75" id="0nI-JV-r68"/>
+                                                    <constraint firstAttribute="bottom" secondItem="R2M-g7-1TT" secondAttribute="bottom" id="F4r-Jc-NaQ"/>
+                                                    <constraint firstItem="5JQ-7X-ggn" firstAttribute="centerX" secondItem="R2M-g7-1TT" secondAttribute="centerX" id="I9x-QW-lOK"/>
+                                                    <constraint firstItem="5JQ-7X-ggn" firstAttribute="top" secondItem="mVi-dT-Tih" secondAttribute="bottom" constant="1" id="PAN-Kx-aum"/>
+                                                    <constraint firstItem="5JQ-7X-ggn" firstAttribute="leading" secondItem="mVJ-Is-uRL" secondAttribute="leadingMargin" id="SVb-l2-4jH"/>
+                                                    <constraint firstItem="R2M-g7-1TT" firstAttribute="top" secondItem="5JQ-7X-ggn" secondAttribute="bottom" constant="8" symbolic="YES" id="WZP-XK-ouF"/>
+                                                    <constraint firstItem="5JQ-7X-ggn" firstAttribute="centerY" secondItem="mVJ-Is-uRL" secondAttribute="centerY" id="Xcw-Br-cPV"/>
+                                                    <constraint firstItem="mVi-dT-Tih" firstAttribute="top" secondItem="mVJ-Is-uRL" secondAttribute="top" id="nYi-Rs-xfH"/>
+                                                    <constraint firstItem="mVi-dT-Tih" firstAttribute="trailing" secondItem="mVJ-Is-uRL" secondAttribute="trailingMargin" id="pe5-1w-qJo"/>
+                                                    <constraint firstItem="mVi-dT-Tih" firstAttribute="trailing" secondItem="5JQ-7X-ggn" secondAttribute="trailing" id="qEN-EG-9TG"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="mVJ-Is-uRL" secondAttribute="trailing" id="2ED-fN-AXP"/>
+                                            <constraint firstItem="mVJ-Is-uRL" firstAttribute="leading" secondItem="0uk-xe-eoO" secondAttribute="leading" id="7dS-lY-lZl"/>
+                                            <constraint firstItem="mVJ-Is-uRL" firstAttribute="bottom" secondItem="Ffv-V4-Utn" secondAttribute="bottomMargin" id="MH2-18-jzG"/>
+                                            <constraint firstItem="mVJ-Is-uRL" firstAttribute="top" secondItem="Ffv-V4-Utn" secondAttribute="top" constant="116" id="P7S-cW-NfS"/>
+                                            <constraint firstItem="0uk-xe-eoO" firstAttribute="leading" secondItem="Ffv-V4-Utn" secondAttribute="leading" id="Rio-1w-HKc"/>
+                                            <constraint firstItem="0uk-xe-eoO" firstAttribute="trailing" secondItem="mVJ-Is-uRL" secondAttribute="trailing" id="X7x-af-haH"/>
+                                            <constraint firstItem="0uk-xe-eoO" firstAttribute="top" secondItem="Ffv-V4-Utn" secondAttribute="top" id="bcr-Si-beH"/>
+                                            <constraint firstAttribute="height" constant="183" id="mhz-Gq-apN"/>
+                                            <constraint firstAttribute="bottom" secondItem="0uk-xe-eoO" secondAttribute="bottom" id="w0V-gK-CFQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.73333333329999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="gNd-nw-rfW" secondAttribute="trailing" id="L5A-E9-7vM"/>
+                                    <constraint firstItem="Ffv-V4-Utn" firstAttribute="top" secondItem="dkS-ur-rdA" secondAttribute="top" id="NSL-Mn-8a3"/>
+                                    <constraint firstItem="gNd-nw-rfW" firstAttribute="top" secondItem="Ffv-V4-Utn" secondAttribute="bottom" constant="2" id="RNb-mo-hcP"/>
+                                    <constraint firstItem="Ffv-V4-Utn" firstAttribute="trailing" secondItem="gNd-nw-rfW" secondAttribute="trailing" id="Ru9-YS-0dh"/>
+                                    <constraint firstItem="Ffv-V4-Utn" firstAttribute="centerX" secondItem="dkS-ur-rdA" secondAttribute="centerX" id="aQ2-E3-90z"/>
+                                    <constraint firstItem="Ffv-V4-Utn" firstAttribute="leading" secondItem="gNd-nw-rfW" secondAttribute="leading" id="kea-yi-2Ys"/>
+                                    <constraint firstItem="gNd-nw-rfW" firstAttribute="leading" secondItem="dkS-ur-rdA" secondAttribute="leading" id="oa6-mp-sTH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.96985434459999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="wjm-26-JWQ" firstAttribute="top" secondItem="gNd-nw-rfW" secondAttribute="bottom" id="3Ti-Qz-O9n"/>
+                            <constraint firstItem="dkS-ur-rdA" firstAttribute="top" secondItem="NMS-Py-EpB" secondAttribute="top" id="F2w-sm-hfN"/>
+                            <constraint firstItem="dkS-ur-rdA" firstAttribute="bottom" secondItem="wjm-26-JWQ" secondAttribute="top" id="N07-19-lUZ"/>
+                            <constraint firstItem="dkS-ur-rdA" firstAttribute="leading" secondItem="NMS-Py-EpB" secondAttribute="leading" id="WeV-0R-dn5"/>
+                            <constraint firstAttribute="trailing" secondItem="dkS-ur-rdA" secondAttribute="trailing" id="hvq-Nj-Hvj"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nMr-cD-HYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2395" y="-2569"/>
         </scene>
     </scenes>
     <resources>
